--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.15.3",
     "bluebird": "^3.5.0",
     "body-parser": "^1.13.3",
+    "bower": "^1.8.0",
     "compression": "^1.5.2",
     "cookie-parser": "^1.3.3",
     "ejs": "^2.3.1",
