--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "https://mvd.js.uy/",
   "dependencies": {
     "axios": "^0.15.3",
+    "moment": "^2.18.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-loading": "^0.0.9",
