--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "moment": "^2.18.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "react-loading": "^0.0.9",
     "react-redux": "^5.0.3",
+    "react-spinkit": "^2.1.1",
     "redux": "^3.6.0",
     "redux-logger": "^3.0.0",
     "redux-promise-middleware": "^4.2.0",
